Prevent line breaks on <code> tags

--- a/create-remote-development-server/style.css
+++ b/create-remote-development-server/style.css
@@ -1,3 +1,7 @@
 div.grid-x {
   justify-content: center;
 }
+
+code {
+  white-space: nowrap;
+}
